--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Racer-boys-on-the-prairies-b-The-treasure-of-Golden-Peak_75395
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 75395-h/images/cover.jpg
 creator:
   author:
     agent_name: Young, Clarence
@@ -7,6 +10,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1632
     wikipedia: https://en.wikipedia.org/wiki/Clarence_Young
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75395#The-Racer-boys-on-the-prairies-b-The-treasure-of-Golden-Peak
 gutenberg_issued: '2025-02-17'
 gutenberg_type: Text
 identifiers:
